--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.10",
+    "body-parser": "^1.19.2",
+    "express": "^4.17.3",
+    "mysql": "^2.18.1",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-qr-reader": "^2.2.1"
