--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "body-parser": "^1.19.2",
+    "css-loader": "^6.7.1",
     "express": "^4.17.3",
     "mysql": "^2.18.1",
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-qr-reader": "^2.2.1"
+    "react-qr-reader": "^2.2.1",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
     "eslint": "8.8.0",
