--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "css-loader": "^6.7.1",
     "express": "^4.17.3",
     "mysql": "^2.18.1",
