--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-qr-reader": "^2.2.1",
-    "style-loader": "^3.3.1"
+    "react-router-dom": "0.0.0-experimental-compat.4",
+    "style-loader": "^3.3.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.8.0",
