--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "babel-plugin-macros": "^3.1.0",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "css-loader": "^6.7.1",
@@ -18,6 +23,7 @@
     "react-dom": "17.0.2",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "0.0.0-experimental-compat.4",
+    "reactive-button": "^1.3.12",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.5"
   },
