Prueba configuracion con env

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "body-parser": "1.19.2",
     "cors": "2.8.5",
     "css-loader": "6.7.1",
+    "dotenv": "16.0.0",
     "express": "4.17.3",
-    "modern-react-qr-reader": "^1.0.12",
+    "modern-react-qr-reader": "1.0.12",
     "mysql": "2.18.1",
     "next": "12.1.0",
     "react": "17.0.2",
