--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "modo-qr",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,12 +8,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "@fortawesome/fontawesome-svg-core": "6.1.1",
+    "@fortawesome/free-regular-svg-icons": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@fortawesome/react-fontawesome": "0.1.18",
+    "babel-plugin-macros": "3.1.0",
+    "body-parser": "1.19.2",
+    "cors": "2.8.5",
+    "css-loader": "6.7.1",
+    "modern-react-qr-reader": "1.0.12",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-qr-reader": "2.2.1",
+    "react-router-dom": "0.0.0-experimental-compat.4",
+    "reactive-button": "1.3.12",
+    "reactjs-popup": "2.0.5",
+    "style-loader": "3.3.1",
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.10"
   }
 }
