--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "body-parser": "1.19.2",
     "cors": "2.8.5",
     "css-loader": "6.7.1",
+    "cuid": "2.1.8",
     "modern-react-qr-reader": "1.0.12",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^14.2.1",
     "react-router-dom": "0.0.0-experimental-compat.4",
     "reactive-button": "1.3.12",
     "reactjs-popup": "2.0.5",
